--- a/config/database.yml
+++ b/config/database.yml
@@ -17,7 +17,7 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  username: developer
+  username: bestbase
   password:
   host: localhost
   # For details on connection pooling, see rails configuration guide
@@ -26,7 +26,7 @@ default: &default
 
 development:
   <<: *default
-  database: bangkok-rb_development
+  database: bangkok_rb_development
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -60,7 +60,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: bangkok-rb_test
+  database: bangkok_rb_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -83,6 +83,6 @@ test:
 #
 production:
   <<: *default
-  database: bangkok-rb_production
+  database: bangkok_rb_production
   username: bangkok-rb
   password: <%= ENV['BANGKOK-RB_DATABASE_PASSWORD'] %>
