--- a/config/database.yml
+++ b/config/database.yml
@@ -17,16 +17,15 @@
 default: &default
   adapter: postgresql
   encoding: unicode
-  username: bestbase
-  password:
   host: localhost
+  username: vagrant
   # For details on connection pooling, see rails configuration guide
   # http://guides.rubyonrails.org/configuring.html#database-pooling
   pool: 5
 
 development:
   <<: *default
-  database: bangkok_rb_development
+  database: devcon
 
   # The specified database role being used to connect to postgres.
   # To create additional roles in postgres see `$ createuser --help`.
@@ -60,7 +59,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: bangkok_rb_test
+  database: devcon_test
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -83,6 +82,3 @@ test:
 #
 production:
   <<: *default
-  database: bangkok_rb_production
-  username: bangkok-rb
-  password: <%= ENV['BANGKOK-RB_DATABASE_PASSWORD'] %>
